--- a/src/scss/_content.scss
+++ b/src/scss/_content.scss
@@ -1,7 +1,7 @@
 @import "./mixins";
 
 .content {
-  height: 100vh;
+  // height: 100vh;
   background: rgb(248, 248, 248);
   padding-top: 24px;
   padding-bottom: 32px;
