--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -24,6 +24,10 @@ body {
   font-size: 24px;
   color: rgb(27, 28, 33);
   font-weight: 400;
+
+  @include respond-to(1440px) {
+    display: flex;
+  }
 }
 
 ul,
@@ -45,6 +49,15 @@ a {
 
   @include respond-to(320px) {
     padding: 0 16px;
+  }
+}
+
+.wrapper {
+  // display: none;
+
+  @include respond-to(1120px) {
+    display: block;
+    width: 100%;
   }
 }
 
@@ -91,7 +104,7 @@ a {
     }
   }
 
-  @include respond-to(1120px) {
+  @include respond-to(1440px) {
     display: none;
   }
 }
