--- a/src/scss/_sidebar.scss
+++ b/src/scss/_sidebar.scss
@@ -4,8 +4,26 @@
 // Шрифт для номера телефона в footer
 
 .sidebar {
-  width: 320px;
   display: none;
+
+  @include respond-to(1440px) {
+    display: inline-flex;
+  }
+}
+
+.sidebar__active {
+  display: inline-flex;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: #fff;
+  z-index: 1000;
+}
+
+.sidebar__wrapper {
+  overflow-y: auto;
+  width: 320px;
+  display: flex;
   flex-direction: column;
   justify-content: space-between;
   box-shadow:
@@ -14,16 +32,16 @@
   padding-right: 15px;
   padding-left: 15px;
   padding-top: 17px;
+  background: #FFFFFF;
 
-  @include respond-to(1440px) {
-    display: flex;
+  @include respond-to(360px) {
+    width: 360px;
   }
 }
 
-
 .sidebar__menu {
   display: flex;
-  margin-bottom: 46px;
+  margin-bottom: 22px;
 
   @include respond-to(1140px) {
     justify-content: space-between;
@@ -135,7 +153,7 @@
   font-size: 16px;
   line-height: 24px;
   max-width: 240px;
-  margin-bottom: 32px;
+  margin-bottom: 21px;
   position: relative;
   margin-left: -15px;
   padding-left: 15px;
@@ -260,7 +278,7 @@
   font-family: 'Russo One', sans-serif;
 
   font-weight: 700;
-  margin-bottom: 45px;
+  margin-bottom: 8px;
   max-width: 220px;
   font-size: 24px;
   line-height: 32px;
