Added modal window feedback,call ( styles )

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,4 +12,6 @@
 @import "content";
 @import "services";
 @import "footer";
-@import "./sidebar";
+@import "sidebar";
+@import "feedback";
+@import "call";
