--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -116,7 +116,7 @@ a {
   position: relative;
   width: 40px;
   height: 40px;
-  background: #FF3E79;
+  background-color: var(--main-color);
   border-radius: 50%;
   transition: all .2s ease-in-out;
 
