--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -66,7 +66,7 @@
   height: 40px;
   align-items: center;
   justify-content: center;
-  background: rgb(255, 62, 121);
+  background: var(--main-color);
   border-radius: 50%;
   transition: all .2s ease-in-out;
 
@@ -96,7 +96,7 @@
   height: 40px;
   align-items: center;
   justify-content: center;
-  background: rgb(255, 62, 121);
+  background: var(--main-color);
   border-radius: 50%;
   transition: all .2s ease-in-out;
 
@@ -125,7 +125,7 @@
   height: 40px;
   align-items: center;
   justify-content: center;
-  background: rgb(255, 62, 121);
+  background: var(--main-color);
   border-radius: 50%;
   transition: all .2s ease-in-out;
 
@@ -157,7 +157,7 @@
   width: 40px;
   height: 40px;
   justify-content: center;
-  background: rgb(255, 62, 121);
+  background: var(--main-color);
   border-radius: 50%;
   transition: all .2s ease-in-out;
 
@@ -202,7 +202,7 @@
   height: 40px;
   align-items: center;
   justify-content: center;
-  background: rgb(255, 62, 121);
+  background: var(--main-color);
   border-radius: 50%;
   transition: all .2s ease-in-out;
 
