--- a/src/scss/_content.scss
+++ b/src/scss/_content.scss
@@ -420,9 +420,9 @@
   }
 }
 
-// .content__descr-more-svg__active {
-//   transform: rotate(-180deg);
-// }
+.content__descr-more-svg__active {
+  transform: rotate(-180deg);
+}
 
 .content__wrapper-img {
   display: none;
