--- a/src/scss/_feedback.scss
+++ b/src/scss/_feedback.scss
@@ -17,6 +17,7 @@
 .feedback__wrapper {
   position: relative;
   max-width: 440px;
+  width: 100%;
   padding-left: 16px;
   padding-right: 16px;
   padding-top: 24px;
