--- a/src/scss/_services.scss
+++ b/src/scss/_services.scss
@@ -45,7 +45,7 @@
     margin-right: -16px;
     padding-left: 16px;
 
-    background: linear-gradient(90deg, rgb(248, 248, 248) 50%, #fff);
+    background: linear-gradient(-90deg, rgb(248, 248, 248) 50%, #fff);
   }
 }
 
@@ -119,10 +119,22 @@
   @include respond-to(768px) {
     height: 150px;
   }
+
+  @include respond-to(1120px) {
+    max-height: 100%;
+  }
 }
 
 .swiper-wrapper__techniq-active {
-  @include respond-to(768px) {}
+
+  @include respond-to(768px) {
+    height: 100%;
+    max-height: 100%;
+  }
+
+  @include respond-to(1120px) {
+    height: 100%;
+  }
 }
 
 .swiper-wrapper__active {
