--- a/src/scss/_call.scss
+++ b/src/scss/_call.scss
@@ -7,6 +7,8 @@
 .feedback-call__active {
   display: block;
   position: fixed;
+  top: 0;
+  right: 0;
   width: 100%;
   height: 100%;
   z-index: 1000;
