--- a/src/scss/_feedback.scss
+++ b/src/scss/_feedback.scss
@@ -8,6 +8,8 @@
   display: block;
   position: relative;
   position: fixed;
+  top: 0;
+  right: 0;
   width: 100%;
   height: 100%;
   z-index: 1000;
