--- a/style.css
+++ b/style.css
@@ -1520,6 +1520,8 @@ a {
   display: block;
   position: relative;
   position: fixed;
+  top: 0;
+  right: 0;
   width: 100%;
   height: 100%;
   z-index: 1000;
@@ -1701,6 +1703,8 @@ a {
 .feedback-call__active {
   display: block;
   position: fixed;
+  top: 0;
+  right: 0;
   width: 100%;
   height: 100%;
   z-index: 1000;
